Added the use of discriminators for inheritance. Band is a sub class of Artist and bands can have many artists

--- a/myFirstHibernateProject/pom.xml
+++ b/myFirstHibernateProject/pom.xml
@@ -56,8 +56,10 @@
 				<configuration>
 					<mainClass>uk.ac.bham.cs.hibernate.music.Main</mainClass>
 					<arguments>
-						<argument>Purchase</argument>
-						<argument>txs142</argument>
+						<argument>InsertArtist</argument>
+						<argument>Billie Joe Armstrong</argument>
+						<argument>11-01-1995</argument>
+						<argument>Green Day</argument>
 					</arguments>
 				</configuration>
 			</plugin>
