Added most of the asset functionality (need to implement updat and delete)

--- a/hibernate-aam/pom.xml
+++ b/hibernate-aam/pom.xml
@@ -58,7 +58,8 @@
         <configuration>
         	<mainClass>uk.ac.bham.cs.hibernate.aam.Main</mainClass>
         	<arguments>
-        		<argument>ListAssetTypes</argument>
+        		<argument>ListAssets</argument>
+        		<argument>1254</argument>
         	</arguments>
         </configuration>
   	  </plugin>
