Added adding and deleting of albums

--- a/myFirstHibernateProject/pom.xml
+++ b/myFirstHibernateProject/pom.xml
@@ -56,10 +56,9 @@
 				<configuration>
 					<mainClass>uk.ac.bham.cs.hibernate.music.Main</mainClass>
 					<arguments>
-						<argument>InsertArtist</argument>
-						<argument>Billie Joe Armstrong</argument>
-						<argument>11-01-1995</argument>
+					<argument>DeleteAlbum</argument>
 						<argument>Green Day</argument>
+						<argument>sdfa</argument>
 					</arguments>
 				</configuration>
 			</plugin>
